syntax = "proto3";
package calculator;

// First Exercise

option java_multiple_files= true;
option java_package = "com.proto.calculate";

message Sum {
  int32 first_number = 1;
  int32 second_number = 2;
}
message SumRequest{
  Sum sum = 1;
}

message SumResponse {
  int32  sum =1;
}

message ComputeAverageRequest {
  Sum sum = 1;
}
message ComputeAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number= 1;
}
message FindMaximumResponse{
  int32  maximum = 1;
}
message SquareRootRequest{
  int32 number = 1;
}
message SquareRootResponse{
  double square_root = 1;
}

service CalculatorService{
  // unary api
  rpc Sum(SumRequest) returns (SumResponse){};

  // client streaming api
  rpc ComputeAverage( stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

  // BIDI Streaming api
  rpc FindMaximum(stream FindMaximumRequest) returns ( stream FindMaximumResponse){};

  // Error Handling
  // This RPC throws an exception when negative number is sent
  // The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}